Closed Bug 455035 Opened 18 years ago Closed 18 years ago

Crash shutting down in cookie code

Categories

(Core :: Networking: Cookies, defect)

x86
macOS
defect
Not set
critical

Tracking

()

RESOLVED FIXED

People

(Reporter: bzbarsky, Assigned: timeless)

References

Details

Attachments

(1 file)

###!!! ASSERTION: You can't dereference a NULL nsCOMPtr with operator->().: 'mRawPtr != 0', file ../../../dist/include/xpcom/nsCOMPtr.h, line 811 Program received signal EXC_BAD_ACCESS, Could not access memory. Reason: KERN_PROTECTION_FAILURE at address: 0x00000000 0x00d27b0c in nsCookieService::Observe (this=0xc8b1f10, aSubject=0xc678360, aTopic=0x12e50b "profile-before-change", aData=0x13fb40) at /Users/bzbarsky/mozilla/debug/mozilla/netwerk/cookie/src/nsCookieService.cpp:629 629 mDBConn->Close(); For some reason we failed to open the database during startup, but we're blindly trying to close it anyway. This should have a null-check, methinks.
i don't have a tree to patch this atm, but if someone can do the honors i'll r+.
Attached patch BahSplinter Review
Assignee: nobody → bzbarsky
Status: NEW → ASSIGNED
Attachment #338416 - Flags: superreview?(cbiesinger)
Attachment #338416 - Flags: review?(dwitte)
Comment on attachment 338416 [details] [diff] [review] Bah maybe you should move the if for shutdown-cleanse into this one
Attachment #338416 - Flags: superreview?(cbiesinger) → superreview+
Comment on attachment 338416 [details] [diff] [review] Bah thanks bz, sorry you had to do this. i owe you one :( r=dwitte
Attachment #338416 - Flags: review?(dwitte) → review+
fixed in changeset 0e9b30800119
Assignee: bzbarsky → timeless
Status: ASSIGNED → RESOLVED
Closed: 18 years ago
Resolution: --- → FIXED
Blocks: 449986
Thanks for checking it in, but please use -u next time? ;)
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: