Bug 455035 Crash shutting down in cookie code r=dwitte sr=biesi